php-src/tests/classes/constants_visibility_error_003.exp
Fatal error: Access level to B::publicConst must be public (as in class A) in %s on line 9